--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,10 +13,23 @@
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ],
   "scope": "/",
   "dir": "rtl",
-  "lang": "ar"
+  "lang": "ar",
+  "categories": ["finance", "business", "productivity"]
 }
 
